@@ -9,8 +9,7 @@ It provides:
 * Macros for architecture-dependent assembly code and compilation.
 * Error codes and functions to work with them.
 
-Supported platforms
-======
+## Supported platforms
 
 The build and correct unit test execution has been confirmed for following platforms:
 * FreeBSD
@@ -19,16 +18,14 @@ The build and correct unit test execution has been confirmed for following platf
 * Windows 32-bit
 * Windows 64-bit
 
-Requirements
-======
+## Requirements
 
 The following packages need to be installed for building:
 
 * gcc >= 4.9
 * make >= 4.0
 
-Building
-======
+## Building
 
 To build the library, perform the following commands:
 
@@ -62,3 +59,7 @@ To clean the whole project tree including configuration files, run:
 ```bash
 make prune
 ```
+
+## SAST Tools
+
+* [PVS-Studio](https://pvs-studio.com/en/pvs-studio/?utm_source=website&utm_medium=github&utm_campaign=open_source) - static analyzer for C, C++, C#, and Java code.
