@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.31 ===
+* Fixed several issues reported by PVS Studio static analyzer.
 * Added release_ptr() template method for releasing pointers that should be freed by finally statement.
 
 === 1.0.30 ===
